[package]
name = "dodder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde ={ version = "1.0.160", features = ["derive"]}
serde_json ={ version = "1.0.95" }
chrono ={ version = "0.4.24",features = ["serde"] }
toml = "0.7.3"
